--- a/src/assets/scss/components/_app.scss
+++ b/src/assets/scss/components/_app.scss
@@ -30,10 +30,10 @@ button {
 nav {
   padding: 0.8rem 2.4rem;
   background: rgba(255, 255, 255, 0.97);
-  position: fixed;
+  position: sticky;
   width: 100%;
   z-index: 2;
-  box-shadow: 0 2px 4px -3px rgba(51, 51, 51, 0.2);
+  box-shadow: 0 6px 10px -3px rgba(51, 51, 51, 0.2);
 
   .nav-container {
     display: flex;
@@ -131,7 +131,6 @@ nav {
         position: relative;
         box-shadow: 0 0px 6px rgba(51, 51, 51, 0.15);
         transition: 0.2s ease;
-        width: 202px;
 
         @media screen and (max-width: 600px) {
           margin-right: 0.2rem;
@@ -146,7 +145,7 @@ nav {
 
           .card-text {
             opacity: 1;
-            bottom: 2.3rem;
+            bottom: 0;
           }
         }
 
@@ -164,12 +163,12 @@ nav {
           justify-content: space-between;
           padding: 0.3rem 0.8rem;
           position: absolute;
-          bottom: 1rem;
+          bottom: -1rem;
           opacity: 0;
           transition: 0.6s;
           width: 100%;
           height: 75px;
-          background: linear-gradient(0deg, white 40%, transparent 100%);
+          background: linear-gradient(0deg, white 58%, transparent 90%);
 
           h3 {
             font-size: 1.2rem;
