--- a/src/assets/scss/components/_app.scss
+++ b/src/assets/scss/components/_app.scss
@@ -100,9 +100,11 @@ nav {
 
   h1 {
     padding-left: 0;
+    text-align: left;
   }
 
   #search {
+    display: flex;
     margin: 1rem 1rem 2rem 0;
     height: 2.4rem;
     padding: 0 0.5rem;
@@ -131,6 +133,7 @@ nav {
         position: relative;
         box-shadow: 0 0px 6px rgba(51, 51, 51, 0.15);
         transition: 0.2s ease;
+        width: 202px;
 
         @media screen and (max-width: 600px) {
           margin-right: 0.2rem;
@@ -145,7 +148,7 @@ nav {
 
           .card-text {
             opacity: 1;
-            bottom: 0;
+            bottom: 2.3rem;
           }
         }
 
@@ -163,12 +166,12 @@ nav {
           justify-content: space-between;
           padding: 0.3rem 0.8rem;
           position: absolute;
-          bottom: -1rem;
+          bottom: 1rem;
           opacity: 0;
           transition: 0.6s;
           width: 100%;
           height: 75px;
-          background: linear-gradient(0deg, white 58%, transparent 90%);
+          background: linear-gradient(0deg, white 40%, transparent 100%);
 
           h3 {
             font-size: 1.2rem;
@@ -232,11 +235,15 @@ nav {
                 }
               }
             }
+            label {
+              margin: 0;
+            }
           }
         }
       }
       .no-result {
         margin: 0 4rem 0 0.4rem;
+        text-align: left;
       }
     }
   }
